test/libsolidity/syntaxTests/nameAndTypeResolution/420_interface_variables.sol
interface I {
    uint a;
}
// ----
// TypeError 8274: (18-24): Variables cannot be declared in interfaces.
